--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -87,7 +87,7 @@
       <!-- Right Side Icons -->
       <div class="header-actions d-flex align-items-center">
         <!-- User Profile -->
-        <div class="dropdown">
+        <!-- <div class="dropdown">
           <button
             class="btn btn-link nav-icon dropdown-toggle"
             type="button"
@@ -111,7 +111,7 @@
               </a>
             </li>
           </ul>
-        </div>
+        </div> -->
         <!-- Search Button (Mobile) -->
         <button
           class="btn btn-link nav-icon d-lg-none"
