--- a/src/app/pages/checkout/checkout-summary/checkout-summary.component.scss
+++ b/src/app/pages/checkout/checkout-summary/checkout-summary.component.scss
@@ -16,12 +16,12 @@
     }
 
     .item-image {
-      width: 60px;
-      height: 60px;
+      display: inline-block;
+      width: 100%;
+      height: 250px;
       object-fit: cover;
-      border-radius: 0.25rem;
       margin-left: 1rem;
-    }
+}
 
     .item-details {
       flex: 1;
@@ -55,12 +55,12 @@
       border-bottom: none;
     }
 
-    &.total {
+    .total {
       font-weight: 700;
       font-size: 1.1rem;
-      padding-top: 1rem;
-      margin-top: 0.5rem;
-      border-top: 2px solid #e9ecef;
+      // padding-top: 1rem;
+      // margin-top: 0.5rem;
+      // border-top: 2px solid #e9ecef;
     }
   }
 }
