--- a/src/app/pages/checkout/checkout.component.html
+++ b/src/app/pages/checkout/checkout.component.html
@@ -120,7 +120,7 @@
                           class="form-control"
                           formControlName="rentalPeriod"
                           [class.is-invalid]="isFieldInvalid('rentalPeriod')"
-                          placeholder="أدخل فترة الإيجار (مثال: 3 أشهر)"
+                          placeholder="أدخل فترة الإيجار (مثال: 3 ايام)"
                         />
                         <div class="invalid-feedback">
                           {{ getFieldError("rentalPeriod") }}
