--- a/src/app/pages/products/products.component.html
+++ b/src/app/pages/products/products.component.html
@@ -125,7 +125,7 @@
           <h5 class="card-title placeholder col-6"></h5>
           <p class="card-text placeholder col-12"></p>
           <div class="mt-auto">
-            <button class="btn btn-warning placeholder w-100"></button>
+            <button class="btn btn-warning placeholder w-100" aria-label="تحميل المنتج"></button>
           </div>
         </div>
       </div>
