--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,5 +1,5 @@
 .main-content {
-  min-height: calc(100vh - 200px);
+  min-height: calc(100vh );
   padding-top: 76px; // Header height
   padding-bottom: 2rem;
 }
