--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -4,10 +4,10 @@
     <div class="row align-items-center">
       <div class="col-lg-6">
         <h1 class="display-4 fw-bold mb-4 fade-in">
-          قطع غيار ومكونات كاتربيلر الأصلية
+          قطع غيار ومكونات العوفي الأصلية
         </h1>
         <p class="lead mb-4 fade-in">
-          حافظ على معداتك من كاتربيلر تعمل بأقصى أداء مع القطع الأصلية والدعم
+          حافظ على معداتك من العوفي عمل بأقصى أداء مع القطع الأصلية والدعم
           المتخصص.
         </p>
         <div class="fade-in">
